Add score widget to mergesortProficiency.

--- a/AV/Sorting/mergesortProficiency.html
+++ b/AV/Sorting/mergesortProficiency.html
@@ -37,7 +37,7 @@
       blocks are merged matters so be sure to select the smallest
       blocks first, starting at the left.
     </p>
-    <p class="jsavoutput jsavline"></p>
+    <p><span class="jsavscore" /></p>
     <div id="arrays" class="jsavcanvas"></div>
   </form>
 </div> <!-- container -->
