Updating various parts of Radix Sort chapter

--- a/AV/Development/radix.html
+++ b/AV/Development/radix.html
@@ -11,7 +11,7 @@
   <input type="button" id="about" name="about" value="About" />
   <a class="jsavsettings" href="#">Settings</a>
   <input type="button" id="help" name="help" value="Help" />
-  <h1 style="margin-top:-25px;">Radix Sort Visualization</h1>
+  <h1 align="center" style="margin-top:-25px;">Radix Sort Visualization</h1>
 
   <form id="ssperform">
    
