--- a/Exercises/Sorting/RadixSortMCQ2.html
+++ b/Exercises/Sorting/RadixSortMCQ2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Mergesort Multiple Choice Question 3</title>
+  <title>Radix Sort Question 2</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -9,25 +9,20 @@
   </script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <div id="problem-type-or-description">
-	<p class="question"> A disadvantage of Merge sort is:</p>
-      <div class="solution"><var>" None of the above."</var></div>
+      <p class="question">A disadvantage of Radix Sort is:</p>
+      <div class="solution"><var>"It needs auxilliary storage beyond the input array"</var></div>
       <ul class="choices">
-	<li><var>"Needs lots of auxiliary storage."</var></li>
-	<li><var>"Its average case running time is O(N^2)."</var></li>
-	<li><var>"All of the above."</var></li>
-	</ul>  
-      
-    </div>
-	
+	<li><var>"It is not stable(i.e. records with equal-valued keys might not be in the same order in the output as they were in the input)"
+	<li><var>"It is a quadratic time sort"</var></li>
+	<li><var>"None of these answers"</var></li>	  	 
+      </ul>
+    </div> 
   </div>
 </div>
 </body>
