--- a/Exercises/Sorting/MergeImplMCQ1.html
+++ b/Exercises/Sorting/MergeImplMCQ1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Mergesort Summary Questions</title>
+  <title>Mergesort Implementation Question 1</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -12,13 +12,18 @@
 </head>
 
 <body>
-  <div class="exercise" data-name="MergesortMCQ1" ></div>  
-  <div class="exercise" data-name="MergesortMCQ4" ></div>  
-  <div class="exercise" data-name="MergesortMCQ6" ></div>	  
-  <div class="exercise" data-name="MergesortMCQcost" ></div>	  
-  <div class="exercise" data-name="MergesortMCQcomplex" ></div>	  
-  <div class="exercise" data-name="MergesortMCQequal" ></div>	  
-  <div class="exercise" data-name="MergesortMCQstable" ></div>	  
-  <div class="exercise" data-name="MergesortMCQworst" ></div>	  
+<div class="exercise">
+  <div class="problems">
+    <div id="problem-type-or-description">
+      <p class="question">Mergesort is easier to implement when the
+        implement is a linked list than when it is an array.
+      <div class="solution"><var>"True"</var></div>
+      <ul class="choices" data-category="true">
+	<li><var>"True"</var></li>
+	<li><var>"False"</var></li>			  	  	 
+      </ul>
+    </div>
+  </div>
+</div>
 </body>
 </html>
