--- a/Exercises/Sorting/MergeImplMCQ2.html
+++ b/Exercises/Sorting/MergeImplMCQ2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Mergesort Summary Questions</title>
+  <title>Mergesort Implementation Question 2</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -12,13 +12,19 @@
 </head>
 
 <body>
-  <div class="exercise" data-name="MergesortMCQ1" ></div>  
-  <div class="exercise" data-name="MergesortMCQ4" ></div>  
-  <div class="exercise" data-name="MergesortMCQ6" ></div>	  
-  <div class="exercise" data-name="MergesortMCQcost" ></div>	  
-  <div class="exercise" data-name="MergesortMCQcomplex" ></div>	  
-  <div class="exercise" data-name="MergesortMCQequal" ></div>	  
-  <div class="exercise" data-name="MergesortMCQstable" ></div>	  
-  <div class="exercise" data-name="MergesortMCQworst" ></div>	  
+<div class="exercise">
+  <div class="problems">
+    <div id="problem-type-or-description">
+      <p class="question">The array imlementation for Mergesort uses
+        how many arrays?
+      <div class="solution"><var>"2"</var></div>
+      <ul class="choices" >
+	<li><var>"1"</var></li>
+	<li><var><code>n</code></var></li>			  	  	 
+	<li><var><code>\log n</code></var></li>			  	  	 
+      </ul>
+    </div>
+  </div>
+</div>
 </body>
 </html>
