--- a/Exercises/Sorting/BubsortMCQworst.html
+++ b/Exercises/Sorting/BubsortMCQworst.html
@@ -23,7 +23,7 @@
           <li><var><code>n^2</code></var></li>	 	 
       </ul>
       <div class="hints">
-        <p>Insertion Sort's implementation is made up of two nested for loops.</p>
+        <p>Bubble Sort's implementation is made up of two nested for loops.</p>
         <p>The outer for loop is executed <code>n-1</code> times.</p>
         <p>The inner for loop is executed <code>i</code> times.</p>
         <p>The total cost is the sum of <code>i</code>'s
