--- a/Exercises/Sorting/SelsortPRO.html
+++ b/Exercises/Sorting/SelsortPRO.html
@@ -161,9 +161,8 @@ var checkAnswer = function (arr_size) {
       <div class="hints">
         <p>Determine the element which should appear at
         index <var>sort_pos</var> using Selection Sort.</p>
-        <p>Selection sort will place the largest element from
-        index 0 to index <var>sort_pos</var> at
-        index <var>sort_pos</var>.</p>
+        <p>Selection sort will place the largest record in the range
+        [0 to <var>sort_pos</var>] at position <var>sort_pos</var>.</p>
       </div>
     </div>
   </div>
