Improved the way ODSA.js detects modules pages, improved quicksort proficiency with left and right bound arrows, updated the quicksort proficiency help page

--- a/AV/Sorting/QSprofHelp.html
+++ b/AV/Sorting/QSprofHelp.html
@@ -28,14 +28,13 @@
   
   <li>Select the range to partition</li>
   <ol type="a">
-    <li>Click an element to select it as the left bound. An indicator should appear above the value you selected.</li>
-    <li>Once the left bound has been set, click another element to select it as the right bound.  An indicator should appear above this value as well.</li>
+    <li>Click an element to select it as the left bound. An blue indicator should appear above the value you selected.</li>
+    <li>Once the left bound has been set, click another element to select it as the right bound.  An red indicator should appear above this value.</li>
   </ol>
   <br />
   <ul>
-    <li>If you want to change your bounds, you can click the element again to deselect it.</li>
-    <li><b>Note</b>: The right bound must be deselected in order to deselect the left bound.</li>
-    <li>If the list contains a single element, you must click it twice to set the left and right bounds on the same element.</li>
+    <li>If the list contains a single element, you must click it twice to set the left and right bounds on the same element. When you do a single purple indicator will appear above it.</li>
+    <li>To change your bounds, simply click an element again to deselect it.  <b>Note</b>: If the left and right bounds are set on the same element and you wish to move the left bound, you must move the right bound to another (temporary) location, move the left bound then move the right bound to its final location.</li>
   </ul>
   <br />
   
