--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -30,6 +30,7 @@
       Always select the left and right endpoints, even if it is the same element.  When processing a sublist of length 1, simply mark the element as sorted.  When determining the final location for the pivot, treat any elements that match the pivot as if they were larger than the pivot.
     </p>
     
+    <p><span class="jsavscore" /></p>
     <p class="jsavoutput jsavline"></p>
     <input type="button" id="partition" name="partition" value="Partition" />
     <input type="button" id="markSorted" name="markSorted" value="Mark Selected as Sorted" />
