Added a mini-slideshow to Mergesort.rst, showing merge process

--- a/Exercises/Sorting/MergesortPRO.html
+++ b/Exercises/Sorting/MergesortPRO.html
@@ -133,7 +133,7 @@ var initJSAV = function (a) {
   arr_size = a;
   empty = new Array(arr_size),
   jsav = new JSAV($("#container"));
-  left_size = Math.floor(arr_size / 2);
+  left_size = Math.floor((arr_size + 1) / 2);
   arrdata = JSAV.utils.rand.numKeys(10, 100, arr_size);
   arrdata_left = arrdata.slice(0, left_size);
   arrdata_left.sort(function (a, b) { return a >= b; });
