Cleaned up QuickSortPartitionElement.html, fixed grammatical error in MergeImplMCQ1.html

--- a/Exercises/Sorting/MergeImplMCQ1.html
+++ b/Exercises/Sorting/MergeImplMCQ1.html
@@ -16,11 +16,11 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">Mergesort is easier to implement when the
-        implement is a linked list than when it is an array.
+        implementation is a linked list than when it is an array.
       <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+        <li><var>"True"</var></li>
+        <li><var>"False"</var></li>
       </ul>
     </div>
   </div>
