Issue #129 and :numref: directive bugs. Added a function inside the avmetadata diretive to sebd chapter information to the template. Updated the template to display chapter number and title in header. Updated preprocessor to correctly count module especially when mutiple modules are inside a single file. this was making :numref: to display incorrect numbers.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -85,7 +85,7 @@
         {%- if pagename=="index" -%}
 	<h2 class="heading" ><span  style="margin-left: 60px;">Table Of Contents</span></h2>
 	{%- else %}
-	  <h2 class="heading" ><span  style="margin-left: 60px;">{{ title|striptags|e }}</span></h2>
+	  <h2 class="heading" ><span  style="margin-left: 60px;">{{ chapter_items[pagename] }}</span></h2>
 	{%- endif %}
 
         {%- endif %}
