Small wording changes

--- a/Exercises/Sorting/QuicksortMCQcomplex.html
+++ b/Exercises/Sorting/QuicksortMCQcomplex.html
@@ -16,7 +16,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">In which cases are the time complexities
-	the same for Insertion Sort?</p>
+	the same for Quicksort?</p>
       <div class="solution"><var>"Best and Average only"</var></div>
       <ul class="choices">
 	<li><var>"Worst and Best only"</var></li>
