--- a/Exercises/Sorting/QuicksortPivotPRO.html
+++ b/Exercises/Sorting/QuicksortPivotPRO.html
@@ -1,12 +1,12 @@
 <!--
-Insertion Sort mini-proficiency exercise.
+Quicksort mini-proficiency exercise.
 Written by Gayathri Subramanian, Dan Breakiron, and Cliff Shaffer
 -->
 <!DOCTYPE html>
 <html data-require="math">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Find Pivot Element</title>
+  <title>Quicksort Find Pivot Element</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
