--- a/Exercises/Sorting/QuicksortMCQpartit.html
+++ b/Exercises/Sorting/QuicksortMCQpartit.html
@@ -17,9 +17,9 @@
     <div id="problem-type-or-description">
       <div id="problem-type-or-description">
     	<p class="question">After Quicksort completes the partition function, where is the pivot?</p>
-	<div class="solution"><var>"Between the smaller values and the greater values in the partition"</var></div>
+	<div class="solution"><var>"The last position in the partition"</var></div>
 	<ul class="choices">
-	  <li><var>"The last position in the partition"</var></li>
+	  <li><var>"Between the smaller values and the greater values in the partition"</var></li>
 	  <li><var>"The first position in the partition"</var></li>
 	  <li><var>"The middle position in the partition"</var></li>
 	</ul>  
