Fixed a bug with quicksort arrow methods, refactored JSAV extension methods into avUtils.js

--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -49,6 +49,7 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
+<script src="../avUtils.js"></script>
 <script src="mergesortAV.js"></script>
 </body>
 </html>
