--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -43,6 +43,7 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/build/JSAV.js"></script>
 <script src="../../lib/ODSA.js"></script>
+<script src="../avUtils.js"></script>
 <script src="quicksortProficiency.js"></script>
 </body>
 </html>
