Add more directions to quicksortProficiency exercise to help students understand what to do.

--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -24,10 +24,27 @@
   <form id="quicksortProficiency_avc">
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
-      Select the pivot element, move it to the appropriate location, then select the left and right endpoints of the range you wish to partition and click "Partition".  Once the partition operation is complete, click the location where the pivot point should be moved.  When a selected element has been moved to its final sorted location, click "Mark Selected as Sorted".
+      This exercise has you perform all of the steps taken by
+      Quicksort, except that the details of the partion step are done
+      for you. You must do a series of the following steps until the
+      array is completely sorted.
+      <br>(1) Select the pivot element and move it to the appropriate location;
+      <br>(2) Select the left and right endpoints of the range you
+      wish to partition and click "Partition".
+      <br>(3) Once the partition operation has been done for you,
+      click the location where the pivot point should be moved to.
+      <br>(4)When a selected element has been moved to its final sorted
+      location, click "Mark Selected as Sorted".
+      <br>Repeat these steps until the array is sorted. If you have
+      trouble understanding what you are supposed to do, try running
+      through a "Model Answer" to see how it is supposed to be done.
       <br /><br />
-      
-      Always select the left and right endpoints, even if it is the same element.  When processing a sublist of length 1, simply mark the element as sorted.  When determining the final location for the pivot, treat any elements that match the pivot as if they were larger than the pivot.
+
+      Always select the left and right endpoints, even if it is the
+      same element.  When processing a sublist of length 1, simply
+      mark the element as sorted.  When determining the final location
+      for the pivot, treat any elements that match the pivot as if
+      they were larger than the pivot.
     </p>
     
     <p><span class="jsavscore" /></p>
