Split AV and module specific code out of ODSA.js and put it in AV/opendsaAV.js and RST/source/_static/opendsaMOD.js, respectively.  Updated RST and AV files as necessary, standardized heapsortProficiency and made changes to facilitate logging.

--- a/AV/Sorting/ShellsortPerformance.html
+++ b/AV/Sorting/ShellsortPerformance.html
@@ -49,6 +49,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
+<script src="../opendsaAV.js"></script>
 <script src="ShellsortPerformance.js"></script>
 </body>
 </html>
