--- a/AV/Sorting/mergesortProficiency.html
+++ b/AV/Sorting/mergesortProficiency.html
@@ -47,7 +47,7 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/build/JSAV.js"></script>
 <script src="../../lib/ODSA.js"></script>
-<script src="../avUtils.js"></script>
+<script src="../opendsaAV.js"></script>
 <script src="mergesortProficiency.js"></script>
 </body>
 </html>
