--- a/AV/Sorting/quicksortAV.html
+++ b/AV/Sorting/quicksortAV.html
@@ -45,7 +45,7 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
-<script src="../avUtils.js"></script>
+<script src="../opendsaAV.js"></script>
 <script src="quicksortAV.js"></script>
 </body>
 </html>
