--- a/AV/Sorting/bubblesortAV.html
+++ b/AV/Sorting/bubblesortAV.html
@@ -49,6 +49,7 @@
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
+<script src="../opendsaAV.js"></script>
 <script src="bubblesortAV.js"></script>
 </body>
 </html>
