--- a/AV/Sorting/heapsortProficiency.html
+++ b/AV/Sorting/heapsortProficiency.html
@@ -4,31 +4,30 @@
     <title>Heapsort</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <link rel="stylesheet" href="../opendsaPRO.css" type="text/css" />
     <link rel="stylesheet" href="heapsortProficiency.css" />
     <style>
 </style>
   </head>
   <body>
-    <div id="HeapsortProficiency_container">
-      <table style="margin-top: -20px">
+    <div id="HeapsortProficiency_container" class="container">
+      <table class="headerTable">
         <tr>
-          <td width=125px>&nbsp;</td>
-          <td width=550px align="center">
-            <p align="center" class="jsavexercisecontrols"></p>
+          <td class="headerLeft">&nbsp;</td>
+          <td class="headerCenter">
+            <p class="jsavexercisecontrols"></p>
           </td>
-          <td width="185px" align="right">
-            <p align="right">
-              <input type="button" name="help" value="Help" />
-              <input type="button" name="about" value="About" />
-              <a class="jsavsettings" href="#">Settings</a>
-            </p>
+          <td class="headerRight">
+            <input type="button" id="help" name="help" value="Help" />
+            <input type="button" id="about" name="about" value="About" />
+            <a id="settings" class="jsavsettings" href="#">Settings</a>
           </td>
         </tr>
       </table>
-      <form style="border: 0px" id="HeapsortProficiency">
+      <form id="heapsortProficiency_avc">
         <div class="jsavcanvas">
-          <p style="margin-top:-10px">Instructions:</p>
-          <p style="margin-top: -15px; padding: 10px; 10px; margin-right: 10px; border: 1px solid black">
+          <p class="instructLabel">Instructions:</p>
+          <p class="instructions">
             Reproduce the behavior of heapsort for the maximum heap below. You can swap keys by clicking the first one and then the second one in either of the representations (array or binary tree). Begin by swapping the last key with the largest key, and reducing the size of the heap by one (by clicking the "Decrement heap size" button). After that,   restore the heap property again.
           </p>
           <p align="center">
@@ -47,7 +46,8 @@
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
     <script src="../../JSAV/extras/binaryheap.js"></script>
-
+    <script src="../../lib/ODSA.js"></script>
+    <script src="../opendsaAV.js"></script>
     <script src="heapsortProficiency.js"></script>
   </body>
 </html>
