Add slideshow for Heapsort.

--- a/Exercises/Sorting/MergesortPRO.html
+++ b/Exercises/Sorting/MergesortPRO.html
@@ -63,7 +63,7 @@ var blockWidth = 47;  // Width of an array element
 var mergeValueIndex = -1;
 var mergeValueArr = null;
 
-// function to handle a click event on an array
+// Handle a click event on an array
 // On click of bottom array element, highlight.
 // On click of (free) position in top array, move highlighted element there.
 var clickHandler = function (arr, index) {
