Clean up radixArrayAV.

--- a/AV/Sorting/SSprofHelp.html
+++ b/AV/Sorting/SSprofHelp.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>ShellSort Proficiency Exercise Help Page</title>
-<link href="AeBookAV.css" title="CSS" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="../help.css" type="text/css" />
 <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
