--- a/AV/Sorting/radixAVHelp.html
+++ b/AV/Sorting/radixAVHelp.html
@@ -1,32 +1,29 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>ShellSort Visualization Help Page</title>
+  <title>Array-based Radix Sort Visualization Help Page</title>
   <link rel="stylesheet" href="../help.css" type="text/css" />
   <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
-<h1>Shellsort Visualization Help Page</h1>
+<h1>Array-based Radix Sort Visualization Help Page</h1>
 <p>
-This is a visualization for Shellsort.
-First you need to pick a series of increment steps.
-Increments are space separated, each one must be smaller than the one
-preceding it, and the last increment must be 1.
-A default set of increments is provide, that you can just accept.
-</p>
-
-<p>
-Next, pick an array size (the default is 8).
-If you want, you can instead type some numbers (space separated) into
+This is a visualization for the array-based implementation of Radix
+sort.
+You can just click the "Run" button and watch the slideshow.
+But if you like, you can change the array size and/or number of digits
+in the input values.
+Or, you can instead type some numbers (space separated) into
 the "Array Values" field. The array will then be of the right size for
-however many numbers you typed.
+however many numbers you typed, and the number of digits will match
+the biggest value that you give.
 </p>
 
 <p>
 When you are done with these settings, hit "Run" to start the
 slideshow.
-You should see a series of bars show up, and you will also see a slide
+You should see some arrays show up, and you will also see a slide
 counter that looks something like "1/56" to indicate that you are on
 the first of 56 slides (the actual number of slides varies with the
 array).
