Updates to Radix Sort AVs

--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -8,9 +8,9 @@
 <body>
 <div id="container">
   <input type="button" id="about" name="about" value="About" />
-  <a class="jsavsettings" href="#">Settings</a>
+  <a id="settings" class="jsavsettings" href="#">Settings</a>
   <input type="button" id="help" name="help" value="Help" />
-  <h1 align="center" style="margin-top:-25px;">Radix Sort Visualization</h1>
+  <h1 style="margin-top:-25px;">Array-based Radix Sort Visualization</h1>
 
   <form id="ssperform" style="margin-top:10px;">
    
