--- a/AV/Development/radixLinked.html
+++ b/AV/Development/radixLinked.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Radix Sort Linked Lists AV</title>
-  <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="radixLinked.css" type="text/css" />
 </head>
@@ -11,6 +10,7 @@
 <div id="container">
   <input type="button" id="about" name="about" value="About" />
   <a id="settings" class="jsavsettings" href="#">Settings</a>
+  <input type="button" id="help" name="help" value="Help" />
   <h1>Radix Sort Linked List Visualization</h1>
 
   <form id="ssperform">
