Clean up linked list radix sort

--- a/AV/Development/radixLinked.html
+++ b/AV/Development/radixLinked.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
   <title>Radix Sort Linked Lists AV</title>
@@ -23,7 +23,7 @@
       <option value = 9>9</option>
       <option value = 10>10</option>
     </select>
-    
+
     <!-- Number of Digits -->
     <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
     <select id="digitsize">
@@ -37,8 +37,8 @@
       <input type="button" id="run" name="run" value="Run" />
       <input type="button" id="reset" name="reset" value="Reset" />
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text" 
-      placeholder="Type space-separated values, or just hit 'run' to use random values" />
+      <input size="65" name="arrayValues" id="arrayValues" type="text" 
+	     placeholder="Type space-separated values, or click 'run' to use random values" />
     </p>
   </form>
   <div id="radixLinked_avc" class="avcontainer">
